--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@cypress/webpack-dev-server": "^1.8.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-react": "^1.3.0",
